# api-ucj-proj

./: README.md
api_proj_ucj/: .env  Cargo.toml
api_proj_ucj/src/: clean_value.rs  definitions.rs  fetch_all_cards.rs  fetch_pipefy_data.rs  main.rs  process_card.rs  process_phases.rs  types.rs  update_excel.rs
