[package]
name = "api_proj_ucj"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
calamine = "0.17"  # Usar calamine para manipulação de arquivos Excel
chrono = "0.4"    # Usar chrono para manipulação de datas
xlsxwriter = "0.6"

